--- a/src/app/auth/pages/sign-in/sign-in.component.html
+++ b/src/app/auth/pages/sign-in/sign-in.component.html
@@ -1,3 +1,3 @@
-<p>sign-in works!</p>
-<input matInput type="text" />
-<button mat-button (click)="signIn()">Sign in with Google</button>
+<button mat-button (click)="signInWithGoogle()">Sign in with Google</button>
+<button mat-button (click)="signOutDebug()">Sign out debug</button>
+<button mat-button (click)="getUserDebug()">Get user debug</button>
