--- a/src/app/shell/pages/shell/shell.component.html
+++ b/src/app/shell/pages/shell/shell.component.html
@@ -1,4 +1,5 @@
 <mat-toolbar color="primary">
     <span>Events7</span>
+    <button (click)="signOut()" mat-flat-button color="warn">Sign out</button>
 </mat-toolbar>
 <router-outlet></router-outlet>
