Clean up the sign in component

--- a/src/app/auth/pages/sign-in/sign-in.component.html
+++ b/src/app/auth/pages/sign-in/sign-in.component.html
@@ -1,3 +1,3 @@
-<button mat-button (click)="signInWithGoogle()">Sign in with Google</button>
-<button mat-button (click)="signOutDebug()">Sign out debug</button>
-<button mat-button (click)="getUserDebug()">Get user debug</button>
+<button mat-stroked-button (click)="signInWithGoogle()">
+    Sign in with Google
+</button>
