--- a/src/app/event-definitions/pages/event-overview/event-overview.component.html
+++ b/src/app/event-definitions/pages/event-overview/event-overview.component.html
@@ -1,1 +1,5 @@
-<p>event-overview works!</p>
+<app-table
+    *ngIf="events | async as eventsValue"
+    [rowData]="eventsValue"
+    [columnDefs]="columnDefs"
+></app-table>
