--- a/src/app/components/table/table-component/table.component.html
+++ b/src/app/components/table/table-component/table.component.html
@@ -4,8 +4,7 @@
             *ngFor="let columnToDisplay of columnDefs"
             [matColumnDef]="columnToDisplay.def"
         >
-            <th
-                mat-header-cell
+            <mat-header-cell
                 style="font-size: medium"
                 *matHeaderCellDef
                 mat-sort-header
@@ -13,14 +12,18 @@
             >
                 {{ columnToDisplay.headerText }}
                 {{ columnToDisplay.sortable ? "*" : "" }}
-            </th>
-            <td mat-cell *matCellDef="let event">
+            </mat-header-cell>
+            <mat-cell *matCellDef="let event">
                 {{ event[columnToDisplay.def] }}
-            </td>
+            </mat-cell>
         </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
-        <tr mat-row *matRowDef="let row; columns: columnsToDisplay"></tr>
+        <mat-header-row *matHeaderRowDef="columnsToDisplay"></mat-header-row>
+        <mat-row
+            mat-ripple
+            *matRowDef="let row; columns: columnsToDisplay"
+            (click)="getRowId && onRowClick(row)"
+        ></mat-row>
     </table>
 
     <mat-paginator [pageSizeOptions]="pageSizeOptions"></mat-paginator>
