--- a/src/app/event-definitions/pages/event-overview/event-overview.component.scss
+++ b/src/app/event-definitions/pages/event-overview/event-overview.component.scss
@@ -20,7 +20,8 @@
     flex: 1;
 }
 
-#ets-event-details__form {
+.ets-evt-overview-empty {
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
