--- a/src/styles/_light-theme.scss
+++ b/src/styles/_light-theme.scss
@@ -4,7 +4,7 @@
 // Available color palettes: https://material.io/design/color/
 $_ets-palette-primary: ng-material.mat-palette(ng-material.$mat-pink);
 $_ets-palette-accent: ng-material.mat-palette(
-    ng-material.$mat-amber,
+    ng-material.$mat-orange,
     A200,
     A100,
     A400
