--- a/src/app/shell/pages/shell/shell.component.scss
+++ b/src/app/shell/pages/shell/shell.component.scss
@@ -5,6 +5,20 @@
     color: light-theme.$ets-color-primary;
 }
 
+.ets-toolbar__links {
+    margin: 0 variables.get-spacing(medium);
+
+    a {
+        margin: 0 variables.get-spacing(small);
+        color: darkslategray;
+        text-decoration: none;
+    }
+}
+
+.active-link {
+    color: light-theme.$ets-color-accent !important;
+}
+
 .ets-toolbar__spacer {
     flex: 1 1 auto;
 }
