--- a/src/styles/_light-theme.scss
+++ b/src/styles/_light-theme.scss
@@ -3,12 +3,7 @@
 
 // Available color palettes: https://material.io/design/color/
 $_ets-palette-primary: ng-material.mat-palette(ng-material.$mat-pink);
-$_ets-palette-accent: ng-material.mat-palette(
-    ng-material.$mat-orange,
-    A200,
-    A100,
-    A400
-);
+$_ets-palette-accent: ng-material.mat-palette(ng-material.$mat-orange);
 $_ets-palette-warn: ng-material.mat-palette(ng-material.$mat-red);
 
 $_ets-theme: ng-material.mat-light-theme(
