Set up readonly view for event overview

--- a/src/app/components/table/table-component/table.component.html
+++ b/src/app/components/table/table-component/table.component.html
@@ -26,5 +26,8 @@
         ></mat-row>
     </table>
 
-    <mat-paginator [pageSizeOptions]="pageSizeOptions"></mat-paginator>
+    <mat-paginator
+        *ngIf="isPaginationEnabled"
+        [pageSizeOptions]="pageSizeOptions"
+    ></mat-paginator>
 </div>
