--- a/src/app/event-definitions/pages/event-overview/event-overview.component.scss
+++ b/src/app/event-definitions/pages/event-overview/event-overview.component.scss
@@ -12,6 +12,12 @@
     align-items: stretch;
 }
 
+.ets-event-details__header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 #event-definitions-list {
     flex: 2;
 }
