--- a/src/app/event-definitions/pages/event-overview/event-overview.component.scss
+++ b/src/app/event-definitions/pages/event-overview/event-overview.component.scss
@@ -7,6 +7,7 @@
 .ets-evt-overview__wrapper {
     padding: variables.get-spacing(medium);
     width: 100%;
+    height: calc(100% - #{variables.get-spacing(xl)});
     display: flex;
     flex-wrap: wrap;
     align-items: stretch;
